# Blog-AI

./: README.md  main.py  pyproject.toml
notebooks/: agent-with-research-and-images.ipynb  agent-with-research.ipynb  basic-agent.ipynb  tavily_test.ipynb
notebooks/blogs/: self-attention_in_transformer_architecture_a_deep_dive.md  self-attention_the_attention_mechanism_that_revolutionized_machine_learning.md  understanding_self-attention_from_basics_to_advanced_implementation.md  understanding_self-attention_from_intuition_to_implementation.md  understanding_self-attention_in_transformer_architecture.md  understanding_self-attention_the_mechanism_behind_modern_transformers.md
